---------------------------------------------------------------------------------------------------
Version: 0.0.9
Date: ????
  Info:
    - Prepare to assign technology bonuses from config
    - Revert beacon interface being indestructible by default
---------------------------------------------------------------------------------------------------
Version: 0.0.8
Date: 2025. 02. 03
  Info:
    - Only condense when it would output at least one
    - Confirm the right amount got removed and inserted
    - Cleanup the container when the crafter goes away
    - Spill items when mining the crafter
    - Spill in deathrattle
    - Handle transferring quality upgraded containers ourselves
    - Fix entity healths
    - Give the container no deathrattle
    - This should be enough to support cloning
    - Fix item loss due to disallowed cloning
    - Hide deathrattle debug messages
    - Typo
    - Fix recipe being unlocked
    - Anticipate quality_indicator_shift
    - Make module slots configurable
    - Convert base quality into a math expression
    - Set all base qualities with the beacon interface
    - Rely on beacon interface for indestructible invisible beacons
    - Update beacon interfaces in on_configuration_changed
    - Prototype a nothing effect
    - Write boilerplate for control stage nothing technology
    - Map technology names to quality modifiers on world load
    - Support parsing negative quality boosts
---------------------------------------------------------------------------------------------------
Version: 0.0.7
Date: 2025. 02. 03
  Info:
    - Fix unrenamed variable
    - Fix crash when there is not enough to upgrade
    - Add failsafe for machines stuck in idle (full & newly unlocked quality, changed recipe)
    - Update recipe
    - Add a technology node under red chips
    - Add technology description
---------------------------------------------------------------------------------------------------
Version: 0.0.6
Date: 2025. 02. 03
  Info: